--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,5 +1,6 @@
 
 
 dependencies {
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
 	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
 }
