--- a/client/build.gradle
+++ b/client/build.gradle
@@ -28,5 +28,7 @@ dependencies {
 	
 	implementation 'org.openjfx:javafx-controls:17.0.2'
 	implementation 'org.openjfx:javafx-fxml:17.0.2'
+	implementation group: 'org.springframework', name: 'spring-websocket', version: '5.3.24'
+	implementation group: 'org.springframework', name: 'spring-messaging', version: '5.3.24'
 	
 }
