--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -3,4 +3,6 @@
 dependencies {
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
 	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
+	implementation group: 'org.springframework', name: 'spring-websocket', version: '5.3.24'
+	implementation group: 'org.springframework', name: 'spring-messaging', version: '5.3.24'
 }
