--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.springframework', name: 'spring-websocket', version: '5.3.24'
+	implementation group: 'org.springframework', name: 'spring-messaging', version: '5.3.24'
 	runtimeOnly 'com.h2database:h2'
 	implementation project(":commons")
 }
