--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# suppress inspection "SpellCheckingInspection" for whole file
+# suppress inspection "SpellCheckingInspection" for whole file
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
