--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,9 +6,8 @@ plugins {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'org.springframework', name: 'spring-websocket', version: '5.3.24'
-	implementation group: 'org.springframework', name: 'spring-messaging', version: '5.3.24'
 	runtimeOnly 'com.h2database:h2'
 	implementation project(":commons")
 }
