--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,8 +1,16 @@
-
+repositories {
+	mavenCentral()
+}
 
 dependencies {
+	compileOnly 'org.projectlombok:lombok:1.18.26'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+	testCompileOnly 'org.projectlombok:lombok:1.18.26'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
+
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
 	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
 	implementation group: 'org.springframework', name: 'spring-websocket', version: '5.3.24'
 	implementation group: 'org.springframework', name: 'spring-messaging', version: '5.3.24'
+
 }
